--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   # docker run -d -p 8080:8080 --name erddap axiom/docker-erddap -e ERDDAP_MEMORY=64G --volumes ...
   erddap:
     container_name: erddap
-    user: 4747:4504  # tylar:imars-common
+    user: 0:4504  # root:imars-common
     restart: unless-stopped
     ports:
       - 8080:8080
