--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,7 @@ services:
       - ERDDAP_MEMORY=64G  # default is 4G
     image: axiom/docker-erddap
     volumes:
+      - erddap-data-volume:/erddapData
       # erddap content incl. setup.xml & dataset.xml :
       - '/root/docker_volumes/erddap-config:/usr/local/tomcat/content/erddap'
       # modified tomcat web.xml :
@@ -20,3 +21,5 @@ services:
       # === ERDDAP dataset location mounts========================================
       - '/mnt/sdb:/mnt/sdb'
       - '/mnt/sdc:/mnt/sdc'
+volumes:
+  erddap-data-volume:
