--- a/.github/workflows/erddap-datasetsxml-builder.yml
+++ b/.github/workflows/erddap-datasetsxml-builder.yml
@@ -29,7 +29,7 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: 7yl4r/erddap-datasetsxml-builder@6a3400f129b2667f572867cd7d9c691dabc326d2
         # uses: 7yl4r/erddap-datasetsxml-builder@master  # does not work
-        uses: 7yl4r/erddap-datasetsxml-builder@v1.1.0
+        uses: 7yl4r/erddap-datasetsxml-builder@latest
         with:
           # Path to /datasets/ directory relative to project root.
           datasets_dir: ./datasets/ # optional, default is ./datasets/
