--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,16 +14,16 @@ services:
     volumes:
       - erddap-data-volume:/erddapData
       # erddap content incl. setup.xml & dataset.xml :
-      - '/root/docker_volumes/erddap-config:/usr/local/tomcat/content/erddap'
+      - './:/usr/local/tomcat/content/erddap'
       # modified tomcat web.xml :
-      - '/root/docker_volumes/erddap-config/web.xml:/usr/local/tomcat/conf/web.xml'
+      - './web.xml:/usr/local/tomcat/conf/web.xml'
       # === ERDDAP dataset location mounts========================================
       - '/mnt/sdb:/mnt/sdb'
       - '/mnt/sdc:/mnt/sdc'
       # custom color palette for seascape
-      - /root/docker_volumes/erddap-config/datasets/noaa_aoml_seascapes_8day/Seascapes.cpt:/usr/local/tomcat/webapps/erddap/WEB-INF/cptfiles/Seascapes.cpt
+      - ./datasets/noaa_aoml_seascapes_8day/Seascapes.cpt:/usr/local/tomcat/webapps/erddap/WEB-INF/cptfiles/Seascapes.cpt
       # custom messages.xml required to have a custom color palette:
-      - /root/docker_volumes/erddap-config/messages.xml:/usr/local/tomcat/webapps/erddap/WEB-INF/classes/gov/noaa/pfel/erddap/util/messages.xml
+      - ./messages.xml:/usr/local/tomcat/webapps/erddap/WEB-INF/classes/gov/noaa/pfel/erddap/util/messages.xml
 
   nginx:
     image: nginx:stable
