--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,20 +10,23 @@ services:
     # no direct port exposure since nginx will handle this
     environment:
       - ERDDAP_MEMORY=64G  # default is 4G
+      - ERDDAP_baseUrl=/erddap
     image: axiom/docker-erddap:latest-jdk17-openjdk
     volumes:
       - erddap-data-volume:/erddapData
       # erddap content incl. setup.xml & dataset.xml :
-      - './:/usr/local/tomcat/content/erddap'
+      - '/root/docker_volumes/erddap-config:/usr/local/tomcat/content/erddap'
       # modified tomcat web.xml :
-      - './web.xml:/usr/local/tomcat/conf/web.xml'
+      - '/root/docker_volumes/erddap-config/web.xml:/usr/local/tomcat/conf/web.xml'
       # === ERDDAP dataset location mounts========================================
       - '/mnt/sdb:/mnt/sdb'
       - '/mnt/sdc:/mnt/sdc'
       # custom color palette for seascape
-      - ./datasets/noaa_aoml_seascapes_8day/Seascapes.cpt:/usr/local/tomcat/webapps/erddap/WEB-INF/cptfiles/Seascapes.cpt
+      - /root/docker_volumes/erddap-config/datasets/noaa_aoml_seascapes_8day/Seascapes.cpt:/usr/local/tomcat/webapps/erddap/WEB-INF/cptfiles/Seascapes.cpt
       # custom messages.xml required to have a custom color palette:
-      - ./messages.xml:/usr/local/tomcat/webapps/erddap/WEB-INF/classes/gov/noaa/pfel/erddap/util/messages.xml
+      - /root/docker_volumes/erddap-config/messages.xml:/usr/local/tomcat/webapps/erddap/WEB-INF/classes/gov/noaa/pfel/erddap/util/messages.xml
+    networks:
+      - erddap-network
 
   nginx:
     image: nginx:stable
@@ -36,6 +39,11 @@ services:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - erddap
+    networks:
+      - erddap-network
+
+networks:
+  erddap-network:
 
 volumes:
   erddap-data-volume:
