--- a/nginx.conf
+++ b/nginx.conf
@@ -4,8 +4,8 @@ server {
     server_name localhost;
 
     location / {
-        proxy_pass http://erddap:8080;
-        proxy_set_header Host $host;
+        proxy_pass http://erddap:8080/;
+        proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
@@ -18,6 +18,11 @@ server {
         # Timeouts
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
-        proxy_read_timeout 60s;
+        proxy_read_timeout 300s;
+
+        # Buffer settings
+        proxy_buffer_size 128k;
+        proxy_buffers 4 256k;
+        proxy_busy_buffers_size 256k;
     }
 }
