--- a/nginx.conf
+++ b/nginx.conf
@@ -3,8 +3,8 @@ server {
     listen 8080;
     server_name localhost;
 
-    location / {
-        proxy_pass http://erddap:8080/;
+    location /erddap/ {
+        proxy_pass http://erddap:8080/erddap/;
         proxy_set_header Host $http_host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -24,5 +24,10 @@ server {
         proxy_buffer_size 128k;
         proxy_buffers 4 256k;
         proxy_busy_buffers_size 256k;
+    }
+
+    # Redirect root to /erddap/
+    location = / {
+        return 301 /erddap/;
     }
 }
