(untested) ssl setup

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,5 +26,15 @@ services:
       - /root/docker_volumes/erddap-config/datasets/noaa_aoml_seascapes_8day/Seascapes.cpt:/usr/local/tomcat/webapps/erddap/WEB-INF/cptfiles/Seascapes.cpt
       # custom messages.xml required to have a custom color palette:
       - /root/docker_volumes/erddap-config/messages.xml:/usr/local/tomcat/webapps/erddap/WEB-INF/classes/gov/noaa/pfel/erddap/util/messages.xml
+  nginx:
+    container_name: nginx
+    build: ./nginx
+    restart: unless-stopped
+    ports:
+      - 80:80
+      - 443:443
+    volumes:
+      - ./certs:/etc/nginx/certs
+      
 volumes:
   erddap-data-volume:
