+ 8080 forwarding. + missing Dockerfile

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -29,3 +29,11 @@ server {
         return 301 https://$server_name$request_uri;
     }
 }
+
+# redirect :8080 to support older code
+server {
+    listen 8080;
+    server_name erddap.marine.usf.edu;
+
+    return 301 https://yourdomain.com$request_uri;
+}
