--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,6 +14,17 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+	# Disable gzip to allow sub_filter to work
+	proxy_set_header Accept-Encoding "";
+
+        # Rewrite any occurrence of the wrong URL in the response body
+	# This is a workaround for an error occurring when using https:
+	# >    Loading failed for the <script> with source
+	# >    “https://localhost:8443/erddap/images/wz_tooltip.js”.
+        sub_filter 'https://localhost:8443' 'https://erddap.marine.usf.edu';
+        sub_filter_once off;
+        sub_filter_types text/html text/javascript text/css;
     }
 }
 
@@ -35,5 +46,5 @@ server {
     listen 8080;
     server_name erddap.marine.usf.edu;
 
-    return 301 https://yourdomain.com$request_uri;
+    return 301 https://$server_name$request_uri;
 }
