dune becomes main

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,9 +3,8 @@ server {
     listen 443 ssl;
     server_name erddap.marine.usf.edu;
 
-    ssl_certificate /etc/nginx/certs/erddap_marine_usf_edu_cert.cer;
+    ssl_certificate /etc/nginx/certs/erddap_marine_usf_edu_fullchain.cer;
     ssl_certificate_key /etc/nginx/certs/erddap_marine_usf_edu.key;
-    ssl_trusted_certificate /etc/nginx/certs/erddap_marine_usf_edu_interm.cer;
 
     location / {
         proxy_pass http://erddap:8080/;
@@ -18,13 +17,13 @@ server {
 	# Disable gzip to allow sub_filter to work
 	proxy_set_header Accept-Encoding "";
 
-        # Rewrite any occurrence of the wrong URL in the response body
-	# This is a workaround for an error occurring when using https:
-	# >    Loading failed for the <script> with source
-	# >    “https://localhost:8443/erddap/images/wz_tooltip.js”.
-        sub_filter 'https://localhost:8443' 'https://erddap.marine.usf.edu';
-        sub_filter_once off;
-        sub_filter_types text/html text/javascript text/css;
+#        # Rewrite any occurrence of the wrong URL in the response body
+#	# This is a workaround for an error occurring when using https:
+#	# >    Loading failed for the <script> with source
+#	# >    “https://localhost:8443/erddap/images/wz_tooltip.js”.
+#        sub_filter 'https://localhost:8443' 'https://erddap.marine.usf.edu';
+#        sub_filter_once off;
+#        sub_filter_types text/html text/javascript text/css;
     }
 }
 
@@ -33,11 +32,21 @@ server {
     listen 80;
     server_name erddap.marine.usf.edu;
 
-    location /.well-known/acme-challenge/ {
-        root /var/www/html;  # Required for Certbot renewals
-    }
     location / {
-        return 301 https://$server_name$request_uri;
+        proxy_pass http://erddap:8080/;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+
+        # Disable gzip so that sub_filter can work properly 
+        proxy_set_header Accept-Encoding "";
+
+        # Adjust sub_filter to refer to the HTTP URL rather than HTTPS
+        sub_filter 'https://localhost:8443' 'http://erddap.marine.usf.edu';
+        sub_filter_once off;
+        sub_filter_types text/html text/javascript text/css;
     }
 }
 
